--- a/packages/alarm/skill_device/jammer_detect.yaml
+++ b/packages/alarm/skill_device/jammer_detect.yaml
@@ -9,7 +9,6 @@ input_number:
     unit_of_measurement: "Voti"
 
 template:
-
   - select:
       - name: "Jammer detect entities"
         state: "Disabilitato"
@@ -24,16 +23,16 @@ template:
           {% endfor %}
             {{ ['RESET'] + output.numbers }}
         select_option:
-        - event: customizations
-          event_data:
-            types: jammer_detect
-            sensor_select: '{{ option }}'
+          - event: customizations
+            event_data:
+              types: jammer_detect
+              sensor_select: "{{ option }}"
 
   - trigger:
-    - platform: event
-      event_type: customizations
-      event_data:
-        types: jammer_detect
+      - platform: event
+        event_type: customizations
+        event_data:
+          types: jammer_detect
     sensor:
       - name: Lista sensori jummer
         state: "{{ trigger.event.data.sensor_select }}"
@@ -65,28 +64,28 @@ automation:
       - platform: template
         value_template: "{{ state_attr('sensor.jammer_detect_trigger_entities', 'offline')|int(0) >= states('input_number.jammer_detect_high_availability_vote')|int(0) }}"
     condition:
-    - condition: template
-      value_template: >-
+      - condition: template
+        value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
           {% set alarm = (state_alarm()|from_json)['alarm'] %}
           {{  is_state(alarm, 'armed_away') }}
     action:
-    - alias: INVIA NOTIFICA
-      event: customizations
-      event_data:
-        types: notify_alarm
-        notify: detect_jummer
-        tag: detect_jummer
-        critical: 1.0
-        title: "--Detect Jummer"
-        message: >
-          {% set offline = expand(state_attr('sensor.lista_sensori_jummer','print_list_group'))|selectattr('state', 'in', ['unknown','unavailable'])|map(attribute='name')|list %}
-          {% if offline|length != 0 %}
-            {% if offline|count > 4 %}
-              {{ 'Possibile impiego di jammer per dispositivi offline: ' + offline|count|string }}
+      - alias: INVIA NOTIFICA
+        event: customizations
+        event_data:
+          types: notify_alarm
+          notify: detect_jummer
+          tag: detect_jummer
+          critical: 1.0
+          title: "--Detect Jummer"
+          message: >
+            {% set offline = expand(state_attr('sensor.lista_sensori_jummer','print_list_group'))|selectattr('state', 'in', ['unknown','unavailable'])|map(attribute='name')|list %}
+            {% if offline|length != 0 %}
+              {% if offline|count > 4 %}
+                {{ 'Possibile impiego di jammer per dispositivi offline: ' + offline|count|string }}
+              {% else %}
+                {{ 'Possibile impiego di jammer per dispositivi offline:' + offline|join(', ') }}
+              {% endif %}
             {% else %}
-              {{ 'Possibile impiego di jammer per dispositivi offline:' + offline|join(', ') }}
+              Errore invio notifica
             {% endif %}
-          {% else %}
-            Errore invio notifica
-          {% endif %}
