--- a/packages/alarm/skill_device/smart_lock/smart_lock_nfc.yaml
+++ b/packages/alarm/skill_device/smart_lock/smart_lock_nfc.yaml
@@ -30,7 +30,7 @@ automation:
           - >
             {% from 'alarm.jinja' import state_alarm %}
             {% set alarm = (state_alarm()|from_json)['alarm'] %}
-            {{ states[alarm].state == 'disarmed' }}
+            {{ states[alarm].state != 'disarmed' }}
         then:
           - service: lock.lock
             target:
